FIxing some styles, squashing some spiders

--- a/server/public/css/styles.css
+++ b/server/public/css/styles.css
@@ -8,6 +8,13 @@ h1 {
 border-bottom: 1px solid #EEEEEE;
 
 }
+td.taskName {
+    width: 45%;
+}
+
+td.taskNote {
+    width: 37%;
+}
 input {
     height: 30px;
     margin-right: 10px;
